chore: fix overflow bug

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -41,6 +41,7 @@ body {
   position: absolute;
   display: flex;
   flex-flow: column;
+  overflow: auto;
 }
 
 //Titlebar
